// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiFacetButton testClass1 testClass2 css-1i5ch8m-euiFacetButton-unSelected"
  data-test-subj="test subject string"
  title="aria-label"
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props icon is rendered 1`] = `
<button
  class="euiFacetButton css-1i5ch8m-euiFacetButton-unSelected"
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__icon css-1gu24b1-euiFacetButton__icon"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isDisabled is rendered 1`] = `
<button
  class="euiFacetButton css-1i5ch8m-euiFacetButton-unSelected"
  disabled=""
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isLoading is rendered 1`] = `
<button
  class="euiFacetButton css-1i5ch8m-euiFacetButton-unSelected"
  disabled=""
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner css-qp12bi-euiLoadingSpinner-m-euiFacetButton__spinner"
      role="progressbar"
    />
  </span>
</button>
`;

exports[`EuiFacetButton props isSelected is rendered 1`] = `
<button
  class="euiFacetButton css-ucajw6-euiFacetButton-isSelected"
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props quantity is rendered 1`] = `
<button
  class="euiFacetButton css-1i5ch8m-euiFacetButton-unSelected"
  type="button"
>
  <span
    class="css-84oukk-euiFacetButton__content"
  >
    <span
      class="euiFacetButton__text css-w00iqi-euiFacetButton__text"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity css-1axxfch-euiFacetButton__quantity"
    >
      60
    </span>
  </span>
</button>
`;
